worked on alignment issues

--- a/styles.css
+++ b/styles.css
@@ -70,22 +70,22 @@
     background-color: #e0f9ec;
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
-    padding: 12px 15px 12px 15px;
+    padding: 12px 0px 12px 15px;
     width: 65%;
     line-height: 20px;
     color: #1B1B1B;
     font-family: "Cerebri Sans",sans-serif;
-    font-weight: 100;
+    font-weight: 300;
 }
 .div-dark-green{
     text-align: center;
     background-color:#00c267;
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
-    padding: 11px 15px 16px 16px;
+    padding: 11px 12px 16px 14px;
     color: white;
     width: 35%;
-    line-height:17px;
+    line-height:22px;
     font-family: "Cerebri Sans",sans-serif;
 
 }
@@ -98,6 +98,7 @@
     line-height: 20px;
     color: #1B1B1B;
     font-family: "Cerebri Sans",sans-serif;
+    font-weight: 300;
 }
 .div-dark-orange{
     padding-top: auto;
@@ -106,11 +107,11 @@
     background-color:#ffbe56;
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
-    padding: 20px 15px 6px 16px;
+    padding: 22px 15px 4px 16px;
     color: white;
     width: 35%;
     line-height:17px;
-    font-weight: 600;
+    font-weight: 500;
     font-family: "Cerebri Sans",sans-serif;
 }
 .blue-bg{
@@ -148,14 +149,14 @@
 .phone-container{
     
     background-color: #c3b6f7;
-    text-align: center; 
+    text-align: right; 
     border-radius: 50%;
     height: 40px;
     width: 40px;
     display: flex;
-    justify-content: center;
+    /* justify-content: center;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; */
 }
 .icon{
     /* width: 20px;
@@ -171,14 +172,14 @@
 .play-container{
     
     background-color: #efa88d;
-    text-align: center; 
+    text-align: right; 
     border-radius: 50%;
     height: 40px;
     width: 40px;
     display: flex;
-    justify-content: center;
+    /* justify-content: center;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; */
 }
 .half-text{
     font-weight: 500;
